--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <div class="mdui-dialog-title">关于未见云 - Unnocloud.com</div>
   <div class="mdui-dialog-content">
     <div class="mdui-typo">
-      <p>未见云隶属于 <a href="https://nullcraft.org" target="_blank">灵工艺工作室</a> 由 未知云 提供硬件支持</p>
+      <p>未见云 - 一份外卖钱上云 | 超低价</p>
     </div>
   </div>
   <div class="mdui-dialog-actions">
@@ -287,7 +287,7 @@
     const typedTextSpan = document.querySelector(".typed-text");
     const cursorSpan = document.querySelector(".cursor");
     
-    const textArray = ["一份外卖钱即可购买的云产品", "针对性对用户提供低价云服务", "灵工艺&未知云旗下云服务供应商"];
+    const textArray = ["一份外卖钱即可购买的云产品", "针对性对用户提供低价云服务", "低价高配，货真价实"];
     const typingSpeed = 200;
     const erasingSpeed = 100;
     const newTextDelay = 2000;
