--- a/cloud/vps/index.html
+++ b/cloud/vps/index.html
@@ -161,6 +161,12 @@
        </div>
     </div>
 
+    <!--暑假活动-->
+    <div class="mdui-typo">
+      <h4 class="style-article-title mdui-text-color-pink">— 假期来临，内存狂欢 —<a class="style-anchor" id="buy"></a></h4>
+      <p>初级以上套餐(含初级)，一次购买2月以上也<b>送内存咯</b></b></p>
+    </div>
+
     <!--购买服务-->
     <div class="mdui-typo">
       <h4 class="style-article-title">购买服务<a class="style-anchor" id="buy"></a></h4>
